Trying to resolve list alignment, updated for peer review

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -310,6 +310,11 @@ border-top: 1px solid grey;
 /* border: 2px solid green; */
 }
 
+.servicescontainer{
+	margin-top: 20px;
+	margin-left: 20px;
+}
+
 .services{
 	width: 300px;
 	height: 200px;
@@ -325,21 +330,22 @@ padding-top: 20px;
 display: flex;
 /* flex-direction: row; */
 
-/* flex-wrap: wrap; */
+flex-wrap: wrap;
 margin-top: 20px;
 justify-content: space-around;
 border-top: 1px solid black;
 }
 
 .list{
-	display: flex;
+	/* display: flex;
 	flex-direction: column;
 	align-self: flex-start;
-	/* align-self: baseline; */
+	align-self: baseline; */
+	align-self: flex-end;
 	line-height: 1.6;
-	margin-left: 80px;
-	margin-bottom: 100px;
-
+	/* margin-left: 70px;
+	margin-bottom: 200px; */
+border: 1px solid red;
 
 }
 
